Couple of fixes for img sizing + alignment on mobile

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -69,6 +69,7 @@ body {
 
 #editors-choice img {
 	max-width: 200px;
+	min-width: 100px;
 }
 
 /* fracture team text section */
